#+title: Change Log for ollama-buddy
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for each tagged commit on the
project's main git repository: [[https://github.com/captainflasmr/ollama-buddy

* Versions

** <2026-02-19 Wed> *2.7.0*

Airplane mode for complete internet isolation.

*** New Features

- *Airplane Mode* -- New =ollama-buddy-toggle-airplane-mode= command (=C-c != / transient Actions =!=) completely isolates the package from the internet. When active:
  - All external LLM providers (OpenAI, Claude, Gemini, Grok, Copilot, Codestral, DeepSeek, OpenRouter) are blocked
  - Ollama cloud models are blocked and hidden from the Model Management buffer
  - Web search (=C-c / s= and =C-c / a=) is disabled
  - Only local Ollama models are available for model selection
  - Attempting to send a prompt to an internet-requiring model shows a minibuffer message
  - The =✈= indicator is shown in the chat buffer header line when active

** <2026-02-17 Mon> *2.6.0*

Refactor remote provider infrastructure into shared module.

*** Internal

- *=ollama-buddy-remote.el=* -- New shared infrastructure module for all remote LLM providers. Extracts common helper functions (prefix handling, API key verification, context building, message formatting, chat buffer preparation, response finalization, error handling, model registration) and a generic OpenAI-compatible send function.
- *Provider modules refactored* -- OpenAI, Grok, Codestral, Copilot, Claude, and Gemini modules now use shared functions from =ollama-buddy-remote.el=, eliminating ~1400 lines of duplicated code. Each OpenAI-compatible provider (OpenAI, Grok, Codestral) is now a thin configuration wrapper (~100-140 lines). Claude and Gemini retain their unique API formats but share all common infrastructure.